@@ -99,23 +99,23 @@ class PartValidator {
 
 	private void validateIgnoreCase(Part part) {
 
-		Assert.isTrue(part.shouldIgnoreCase() != Part.IgnoreCaseType.ALWAYS || canIgnoreCase(part), () -> String.format(
-				"Can not derive query for '%s': Only the case of String based properties can be ignored within the following keywords: %s",
-				queryMethod, formatTypes(TYPES_SUPPORTING_CASE_INSENSITIVITY)));
+		Assert.isTrue(part.shouldIgnoreCase() != Part.IgnoreCaseType.ALWAYS || canIgnoreCase(part), () -> 
+	"Can not derive query for '%s': Only the case of String based properties can be ignored within the following keywords: %s".formatted(
+queryMethod, formatTypes(TYPES_SUPPORTING_CASE_INSENSITIVITY)));
 	}
 
 	private void validateTemporalProperty(Part part) {
 
-		Assert.isTrue(COMPARABLE_TEMPORAL_TYPES.contains(part.getProperty().getLeafType()), () -> String.format(
-				"Can not derive query for '%s': The keywords %s work only with properties with one of the following types: %s",
-				queryMethod, formatTypes(Collections.singletonList(part.getType())), COMPARABLE_TEMPORAL_TYPES));
+		Assert.isTrue(COMPARABLE_TEMPORAL_TYPES.contains(part.getProperty().getLeafType()), () -> 
+	"Can not derive query for '%s': The keywords %s work only with properties with one of the following types: %s".formatted(
+queryMethod, formatTypes(Collections.singletonList(part.getType())), COMPARABLE_TEMPORAL_TYPES));
 	}
 
 	private void validateCollectionProperty(Part part) {
 
 		Assert.isTrue(part.getProperty().getLeafProperty().isCollection(),
-				() -> String.format("Can not derive query for '%s': The keywords %s work only with collection properties",
-						queryMethod, formatTypes(Collections.singletonList(part.getType()))));
+				() -> "Can not derive query for '%s': The keywords %s work only with collection properties".formatted(
+			queryMethod, formatTypes(Collections.singletonList(part.getType()))));
 	}
 
 	private void validatePointProperty(Part part) {
@@ -123,8 +123,8 @@ class PartValidator {
 		Assert.isTrue(
 				TypeInformation.of(Point.class)
 						.isAssignableFrom(part.getProperty().getLeafProperty().getTypeInformation()),
-				() -> String.format("Can not derive query for '%s': %s works only with spatial properties", queryMethod,
-						part.getType()));
+				() -> "Can not derive query for '%s': %s works only with spatial properties".formatted(queryMethod,
+			part.getType()));
 	}
 
 	private static String formatTypes(Collection<Part.Type> types) {
